Re-aligned dislike button and avatar images no longer appear above footer

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -71,13 +71,13 @@ button {
       margin: auto;
       min-height:200px;
   }
-  
+
     @media (max-width: 600px) {
     .carousel-caption {
-      display: none; 
+      display: none;
     }
   }
-  
+
   body {
   padding-top: 50px;
   padding-bottom: 20px;
@@ -176,6 +176,7 @@ ul.topnav li a.active {
   background-color: #222222;
   text-align: center;
   height: 30px;
+  z-index: 10;
 }
 
 .footer a{
@@ -330,4 +331,8 @@ input[type=checkbox]{
   color: #333;
   cursor: pointer;
   cursor: hand;
+}
+
+.avatar{
+  z-index: 1;
 }
